tests/declare_class/declare_class.exp
Library type error:
lib/test.js:0
inconsistent use of library definitions
  7: declare class D extends _module.C {
                   ^ D. Cannot extend
  7: declare class D extends _module.C {
                             ^^^^^^^^^ _C
  Property `foo` is incompatible:
      8:   foo(): string;
           ^^^^^^^^^^^^^ function type. This type is incompatible with
      2:   foo(): number;
           ^^^^^^^^^^^^^ function type
      The return is incompatible:
          8:   foo(): string;
                      ^^^^^^ string. This type is incompatible with
          2:   foo(): number;
                      ^^^^^^ number

Error: declare_class.js:8
  8: C.x = "";
           ^^ string [1] is incompatible with number [2].
  References:
    8: C.x = "";
             ^^ [1]: string
    8: C.x = "";
       ^^^ [2]: number

Error: declare_class.js:9
  9: C.foo("");
           ^^ string. This type is incompatible with the expected param type of
  3:     static foo(x: number): void;
                       ^^^^^^ number

Error: declare_class.js:12
 12: (C.name: number); // error, it's a string
      ^^^^^^ Cannot cast `C.name` to number because string [1] is incompatible with number [2].
  References:
    1: declare class C {
                     ^ [1]: string
   12: (C.name: number); // error, it's a string
                ^^^^^^ [2]: number

Error: declare_class.js:15
 15: new D(123); // error, number ~> string
           ^^^ number. This type is incompatible with the expected param type of
  5:     constructor(x: string): void;
                        ^^^^^^ string


Found 5 errors
